Archive2/c6/305349f287715c/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:20: error: invalid operands of types ‘const char [5]’ and ‘const char [6]’ to binary ‘operator+’
     str = "Say " + "Hello" + str + " World";
                    ^
